--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -10,7 +10,7 @@
 <AnchorPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="400.0"
             prefHeight="300.0" prefWidth="400.0" stylesheets="@userstyle.css"
             xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="main.ui.client.controllers.loginController">
+            fx:controller="main.ui.client.controllers.LoginController">
     <children>
         <Label stylesheets="@userstyle.css" text="Mail" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0"/>
         <TextField fx:id="tbMail" minWidth="150.0" styleClass="textbox" stylesheets="@userstyle.css"
