--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -13,7 +13,7 @@
 <AnchorPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="250.0" prefWidth="350.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8.0.111"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="main.ui.client.controllers.registerController">
+            fx:controller="main.ui.client.controllers.RegisterController">
     <children>
         <Label layoutX="15.0" layoutY="20.0" stylesheets="@userstyle.css" text="Name"
                AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0"/>
