--- a/src/resources/menu.fxml
+++ b/src/resources/menu.fxml
@@ -1,74 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8.0.111"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.client.controllers.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.MenuController">
     <children>
-        <Label id="title" stylesheets="@userstyle.css" text="TubeFly" AnchorPane.leftAnchor="10.0"
-               AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
-        <Separator prefWidth="200.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0"
-                   AnchorPane.topAnchor="70.0"/>
-        <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
+        <Label id="title" stylesheets="@userstyle.css" text="TubeFly" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+        <Separator prefWidth="200.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="70.0" />
+        <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
             <children>
                 <AnchorPane HBox.hgrow="ALWAYS">
                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </HBox.margin>
                     <children>
-                        <Label stylesheets="@userstyle.css" text="Search" AnchorPane.leftAnchor="10.0"
-                               AnchorPane.topAnchor="0.0"/>
+                        <Label stylesheets="@userstyle.css" text="Search" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
                         <HBox AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="20.0">
                             <children>
                                 <TextField fx:id="tbSearch" styleClass="textbox" stylesheets="@userstyle.css">
                                     <HBox.margin>
-                                        <Insets left="15.0"/>
+                                        <Insets left="15.0" />
                                     </HBox.margin>
                                 </TextField>
-                                <Button mnemonicParsing="false" onAction="#filterPlaylists" stylesheets="@userstyle.css"
-                                        text="Go">
+                                <Button mnemonicParsing="false" onAction="#filterPlaylists" stylesheets="@userstyle.css" text="Go">
                                     <HBox.margin>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </HBox.margin>
                                 </Button>
                             </children>
                         </HBox>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="10.0"
-                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                    AnchorPane.topAnchor="60.0">
+                        <ScrollPane fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
                             <content>
-                                <VBox stylesheets="@userstyle.css">
-                                    <children>
-                                        <HBox styleClass="playlist" stylesheets="@userstyle.css">
-                                            <children>
-                                                <Label text="Playlist name - Creator - Song amount"/>
-                                            </children>
-                                            <VBox.margin>
-                                                <Insets bottom="10.0"/>
-                                            </VBox.margin>
-                                        </HBox>
-                                        <HBox layoutX="10.0" layoutY="10.0" styleClass="playlist"
-                                              stylesheets="@userstyle.css">
-                                            <children>
-                                                <Label text="Playlist name - Creator - Song amount"/>
-                                            </children>
-                                        </HBox>
-                                    </children>
-                                </VBox>
+                                <VBox fx:id="playlistContainer" stylesheets="@userstyle.css" />
                             </content>
                             <padding>
-                                <Insets left="5.0" right="5.0"/>
+                                <Insets left="5.0" right="5.0" />
                             </padding>
                         </ScrollPane>
                     </children>
@@ -77,13 +45,12 @@
                     <children>
                         <Button mnemonicParsing="false" stylesheets="@userstyle.css" text="Create new playlist">
                             <VBox.margin>
-                                <Insets bottom="5.0" top="65.0"/>
+                                <Insets bottom="5.0" top="65.0" />
                             </VBox.margin>
                         </Button>
-                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" stylesheets="@userstyle.css"
-                                text="Manage playlists">
+                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" stylesheets="@userstyle.css" text="Manage playlists">
                             <VBox.margin>
-                                <Insets bottom="5.0" top="5.0"/>
+                                <Insets bottom="5.0" top="5.0" />
                             </VBox.margin>
                         </Button>
                     </children>
