--- a/src/resources/playlistview.fxml
+++ b/src/resources/playlistview.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,12 +17,11 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8.0.111"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.client.controllers.PlaylistViewController">
+            prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.PlaylistViewController">
     <children>
-        <Label id="title" stylesheets="@userstyle.css" text="Playlist name" AnchorPane.leftAnchor="10.0"
-               AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+        <Label id="title" fx:id="playlistName" stylesheets="@userstyle.css" text="Playlist name"
+               AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
         <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
             <children>
@@ -47,31 +51,7 @@
                                     AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                                     AnchorPane.topAnchor="60.0">
                             <content>
-                                <VBox stylesheets="@userstyle.css">
-                                    <children>
-                                        <HBox styleClass="playlist" stylesheets="@userstyle.css">
-                                            <children>
-                                                <AnchorPane HBox.hgrow="ALWAYS">
-                                                    <children>
-                                                        <Label fx:id="lbSongInfo" text="Songname - Arist"
-                                                               AnchorPane.bottomAnchor="5.0"
-                                                               AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="5.0"/>
-                                                        <Label fx:id="lbSongTime" text="04:18"
-                                                               AnchorPane.bottomAnchor="5.0"
-                                                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0"/>
-                                                        <Button layoutX="530.0" layoutY="10.0" mnemonicParsing="false"
-                                                                onAction="#songPlayPause" styleClass="musicbutton"
-                                                                stylesheets="@userstyle.css" text=" ▶ "
-                                                                AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-                                                    </children>
-                                                </AnchorPane>
-                                            </children>
-                                            <VBox.margin>
-                                                <Insets bottom="10.0" top="10.0"/>
-                                            </VBox.margin>
-                                        </HBox>
-                                    </children>
-                                </VBox>
+                                <VBox fx:id="songContainer" stylesheets="@userstyle.css"/>
                             </content>
                             <padding>
                                 <Insets left="5.0" right="5.0"/>
@@ -81,8 +61,8 @@
                 </AnchorPane>
             </children>
         </HBox>
-        <AnchorPane id="bottombar" stylesheets="userstyle.css"
-                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <AnchorPane id="bottombar" stylesheets="userstyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                    AnchorPane.rightAnchor="0.0">
             <children>
                 <VBox AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <children>
@@ -141,10 +121,12 @@
                         </HBox>
                     </children>
                 </VBox>
-                <ProgressBar fx:id="songTimeProgress" progress="0.264" styleClass="progressbar"
+                <ProgressBar fx:id="songTimeProgress" progress="0.0" styleClass="progressbar"
                              stylesheets="@userstyle.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0"
                              AnchorPane.rightAnchor="5.0"/>
             </children>
         </AnchorPane>
+        <Button mnemonicParsing="false" onAction="#toMenu" text="Back" AnchorPane.rightAnchor="10.0"
+                AnchorPane.topAnchor="10.0"/>
     </children>
 </AnchorPane>
