--- a/src/resources/editplaylist.fxml
+++ b/src/resources/editplaylist.fxml
@@ -1,78 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.EditPlaylistController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.EditPlaylistController">
     <children>
-        <Label text="Playlist name" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="10.0">
+        <Label text="Name" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="10.0">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="tbSearch" layoutX="11.0" layoutY="27.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0" />
-        <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+        <TextField fx:id="tbName" layoutX="11.0" layoutY="27.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0" />
+      <Label layoutX="10.0" layoutY="10.0" text="Description" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="60.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="tbDescription" layoutX="21.0" layoutY="37.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="80.0" />
+              <Button mnemonicParsing="false" onAction="#addSong" stylesheets="@userstyle.css" text="Add song" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="115.0" />
+        <HBox prefHeight="597.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="140.0">
             <children>
-                <VBox HBox.hgrow="ALWAYS">
-                    <children>
-                        <Label stylesheets="@userstyle.css" text="Add song">
-                            <VBox.margin>
-                                <Insets bottom="5.0" left="20.0" />
-                            </VBox.margin>
-                        </Label>
-                        <HBox>
-                            <children>
-                                <TextField fx:id="tbSong" styleClass="textbox" stylesheets="@userstyle.css">
-                                    <HBox.margin>
-                                        <Insets left="15.0" />
-                                    </HBox.margin>
-                                </TextField>
-                                <Button mnemonicParsing="false" onAction="#addSong" stylesheets="@userstyle.css" text="Add">
-                                    <HBox.margin>
-                                        <Insets left="5.0" right="5.0" />
-                                    </HBox.margin>
-                                </Button>
-                            </children>
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox styleClass="playlist" stylesheets="@userstyle.css">
-                            <children>
-                                <AnchorPane HBox.hgrow="ALWAYS">
-                                    <children>
-                                        <Label text="Songname - Arist (Length)" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="5.0" />
-                                        <Button mnemonicParsing="false" styleClass="deletebutton" stylesheets="@userstyle.css" text="x" AnchorPane.rightAnchor="0.0" />
-                                    </children>
-                                </AnchorPane>
-                            </children>
-                            <VBox.margin>
-                                <Insets bottom="10.0" top="10.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="67.0" styleClass="playlist" stylesheets="@userstyle.css">
-                            <children>
-                                <AnchorPane HBox.hgrow="ALWAYS">
-                                    <children>
-                                        <Label text="Songname - Arist (Length)" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="5.0" />
-                                        <Button mnemonicParsing="false" styleClass="deletebutton" stylesheets="@userstyle.css" text="x" AnchorPane.rightAnchor="0.0" />
-                                    </children>
-                                </AnchorPane>
-                            </children>
-                        </HBox>
-                    </children>
-                    <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </HBox.margin>
-                </VBox>
+            <ScrollPane prefViewportHeight="580.0" prefViewportWidth="600.0">
+               <content>
+                      <VBox fx:id="songContainer" HBox.hgrow="ALWAYS" />
+               </content>
+            </ScrollPane>
             </children>
         </HBox>
-        <Button mnemonicParsing="false" onAction="#savePlaylist" stylesheets="@userstyle.css" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+        <Button mnemonicParsing="false" onAction="#savePlaylist" stylesheets="@userstyle.css" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" />
+      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#backToMenu" stylesheets="@userstyle.css" text="Back" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
     </children>
 </AnchorPane>
