--- a/src/resources/userstyle.css
+++ b/src/resources/userstyle.css
@@ -124,7 +124,7 @@
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-	-fx-background-color: white;
+	-fx-background-color: #3D000E;
 	-fx-background-radius: 5em;
 }
 
